adaptive fix; add modal; add modal video window

--- a/app/layout/footer.html
+++ b/app/layout/footer.html
@@ -5,12 +5,10 @@
       <h5 class="footer-address__title">Наши офисы</h5><a class="footer-link" href="#">г.Полтава, ул. А.Кукоби, 12</a><a class="footer-link" href="#">г.Миргород, ул.Победы,10, оф.1</a><a class="footer-link" href="#">Время работы: 9:00 – 18:00</a>
     </div>
     <div class="footer-logo"><a class="link" href="#"> 
-        <svg data-aos="fade-down" data-aos-easing="linear" data-aos-duration="800">
+        <svg>
           <use xlink:href="images/main-page_icons-sprite.svg#logo"></use>
         </svg></a></div>
-    <div class="footer-contacts">
-      <h5 class="footer-contacts__title">Наши офисы</h5><a class="footer-link" href="mailto:angrobud@gmail.com"> angrobud@gmail.com</a><a class="footer-link" href="tel=+380509915883">+38(050) 991-58-83</a><a class="footer-link" href="tel=+380509915883">+38(050) 991-58-82</a>
-    </div>
+    <div class="footer-contacts"><a class="footer-link" href="mailto:angrobud@gmail.com"> angrobud@gmail.com</a><a class="footer-link" href="tel=+380509915883">+38(050) 991-58-83</a><a class="footer-link" href="tel=+380509915883">+38(050) 991-58-82</a></div>
     <div class="footer-newsletter">
       <!--FORM START-->
       <form class="footer-newsletter__form" action="">
