--- a/app/layout/info.html
+++ b/app/layout/info.html
@@ -1,7 +1,7 @@
 
 <div class="info" data-aos="fade-down" data-aos-anchor="#about" data-aos-easing="linear" data-aos-duration="400" data-aos-anchor-placement="bottom">
   <div class="info-block info-left"><a class="info-text" href="tel:+380506347178">+38(050) 634 71 78</a>
-    <p class="info-link link--active">Заказать звонок</p>
+    <p class="open-modal info-link link--active">Заказать звонок</p>
   </div><a class="info-block info-right">
     <svg class="info-icon">
       <use xlink:href="images/main-page_icons-sprite.svg#apartament"></use>
