--- a/app/layout/section-apartments.html
+++ b/app/layout/section-apartments.html
@@ -35,7 +35,7 @@
           <use xlink:href="images/main-page_icons-sprite.svg#tover"></use>
         </svg>
       </div>
-      <div class="apartments-tile__title">Выразительная архитектура</div><a class="apartments-tile__link link" href="">Смотреть квартиры объекта</a>
+      <div class="apartments-tile__title">Выразительная архитектура</div><a class="apartments-tile__link link" href="#">Смотреть квартиры объекта</a>
     </div>
     <!--SLEDER TILE-->
     <div class="apartments-tile">
@@ -48,7 +48,7 @@
           <use xlink:href="images/main-page_icons-sprite.svg#location"></use>
         </svg>
       </div>
-      <div class="apartments-tile__title">Транспортная доступность</div><a class="apartments-tile__link link" href="">Смотреть квартиры объекта</a>
+      <div class="apartments-tile__title">Транспортная доступность</div><a class="apartments-tile__link link" href="#">Смотреть квартиры объекта</a>
     </div>
     <!--SLIDER TILE-->
     <div class="apartments-tile">
@@ -61,7 +61,7 @@
           <use xlink:href="images/main-page_icons-sprite.svg#interest-points"></use>
         </svg>
       </div>
-      <div class="apartments-tile__title">Развитая ифраструктура </div><a class="apartments-tile__link link" href="">Смотреть квартиры объекта</a>
+      <div class="apartments-tile__title">Развитая ифраструктура </div><a class="apartments-tile__link link" href="#">Смотреть квартиры объекта</a>
     </div>
     <!--SLIDER TILE-->
     <div class="apartments-tile">
@@ -74,7 +74,7 @@
           <use xlink:href="images/main-page_icons-sprite.svg#layout"></use>
         </svg>
       </div>
-      <div class="apartments-tile__title">Множество планировок</div><a class="apartments-tile__link link" href="">Смотреть квартиры объекта</a>
+      <div class="apartments-tile__title">Множество планировок</div><a class="apartments-tile__link link" href="#">Смотреть квартиры объекта</a>
     </div>
   </div>
 </div>
