--- a/app/pug/index.pug
+++ b/app/pug/index.pug
@@ -39,6 +39,7 @@ html(lang="en")
     
         <!-- modal -->
         include layout/modal.pug
+        include layout/modal-video.pug
         <!-- modal end-->                  
         
         <!--build:js js/main.min.js -->
