--- a/app/pug/layout/footer.pug
+++ b/app/pug/layout/footer.pug
@@ -8,11 +8,11 @@
         
         .footer-logo
             a(href="#").link 
-                svg(data-aos="fade-down" data-aos-easing="linear" data-aos-duration="800")
+                svg
                     use(xlink:href="images/main-page_icons-sprite.svg#logo")
         
         .footer-contacts
-            h5.footer-contacts__title Наши офисы
+            //-h5.footer-contacts__title Наши офисы
             a(href="mailto:angrobud@gmail.com").footer-link  angrobud@gmail.com
             a(href="tel=+380509915883").footer-link +38(050) 991-58-83
             a(href="tel=+380509915883").footer-link +38(050) 991-58-82
