--- a/app/pug/layout/info.pug
+++ b/app/pug/layout/info.pug
@@ -6,7 +6,7 @@
         data-aos-anchor-placement="bottom")
     .info-block.info-left
         a(href="tel:+380506347178").info-text +38(050) 634 71 78
-        p.info-link.link--active Заказать звонок
+        p.open-modal.info-link.link--active Заказать звонок
     a.info-block.info-right
         svg.info-icon
             use(xlink:href="images/main-page_icons-sprite.svg#apartament")
