--- a/app/pug/layout/section-apartments.pug
+++ b/app/pug/layout/section-apartments.pug
@@ -27,7 +27,7 @@ svg.apartments-slider__nextbtn
                 svg.apartments-tile__svg
                     use(xlink:href="images/main-page_icons-sprite.svg#tover")
             .apartments-tile__title Выразительная архитектура
-            a(href="").apartments-tile__link.link Смотреть квартиры объекта
+            a(href="#").apartments-tile__link.link Смотреть квартиры объекта
         //SLEDER TILE
         .apartments-tile
             .apartments-tile__name ЖК "Мирного"
@@ -38,7 +38,7 @@ svg.apartments-slider__nextbtn
                 svg.apartments-tile__svg
                     use(xlink:href="images/main-page_icons-sprite.svg#location")
             .apartments-tile__title Транспортная доступность
-            a(href="").apartments-tile__link.link Смотреть квартиры объекта
+            a(href="#").apartments-tile__link.link Смотреть квартиры объекта
         //SLIDER TILE
         .apartments-tile
             .apartments-tile__name ЖК "Победы"
@@ -49,7 +49,7 @@ svg.apartments-slider__nextbtn
                 svg.apartments-tile__svg
                     use(xlink:href="images/main-page_icons-sprite.svg#interest-points")
             .apartments-tile__title Развитая ифраструктура 
-            a(href="").apartments-tile__link.link Смотреть квартиры объекта
+            a(href="#").apartments-tile__link.link Смотреть квартиры объекта
         //SLIDER TILE
         .apartments-tile
             .apartments-tile__name ЖК "На сенной"
@@ -60,5 +60,5 @@ svg.apartments-slider__nextbtn
                 svg.apartments-tile__svg
                     use(xlink:href="images/main-page_icons-sprite.svg#layout")
             .apartments-tile__title Множество планировок
-            a(href="").apartments-tile__link.link Смотреть квартиры объекта
+            a(href="#").apartments-tile__link.link Смотреть квартиры объекта
         
