--- a/app/pug/layout/section-contact.pug
+++ b/app/pug/layout/section-contact.pug
@@ -7,9 +7,8 @@
                 input#tel(type="tel" required ).contact-form__field
             label( for="email").contact-form__title EMAIL (НЕ ОБЯЗАТЕЛЬНО)
                 input#email(type="email").contact-form__field
-            .contact-form__checkbox
-                input#check(type="checkbox").contact-form__field
-                .contact-form__text
-                    label( for="check").contact-form__title Я даю согласие на обработку моих персональных данных согласно 
-                    a(href="#").link.contact-form__link политике конфиденциальности 
+            label( for="check").contact-form__checkbox.contact-form__title Я даю согласие на обработку моих персональных данных согласно 
+                input#check(type="checkbox").contact-form__field 
+                .contact-form__custom-check
+                a(href="#").link.contact-form__link политике конфиденциальности 
             button(type="submit").btn.contact-form__btn Отправить запрос
