--- a/app/scss/global.scss
+++ b/app/scss/global.scss
@@ -19,3 +19,4 @@
 @import "modules/_section-apartments";
 @import "modules/_section-contact";
 @import "modules/_footer";
+@import "modules/_modal-video";
