--- a/app/layout/section-contact.html
+++ b/app/layout/section-contact.html
@@ -11,12 +11,10 @@
     <label class="contact-form__title" for="email">EMAIL (НЕ ОБЯЗАТЕЛЬНО)
       <input class="contact-form__field" id="email" type="email"/>
     </label>
-    <div class="contact-form__checkbox">
+    <label class="contact-form__checkbox contact-form__title" for="check">Я даю согласие на обработку моих персональных данных согласно 
       <input class="contact-form__field" id="check" type="checkbox"/>
-      <div class="contact-form__text">
-        <label class="contact-form__title" for="check">Я даю согласие на обработку моих персональных данных согласно </label><a class="link contact-form__link" href="#">политике конфиденциальности </a>
-      </div>
-    </div>
+      <div class="contact-form__custom-check"></div><a class="link contact-form__link" href="#">политике конфиденциальности </a>
+    </label>
     <button class="btn contact-form__btn" type="submit">Отправить запрос</button>
   </form>
 </div>
