--- a/app/layout/sidebar.html
+++ b/app/layout/sidebar.html
@@ -46,14 +46,17 @@
       </svg>
       <div class="menu-info__text"> 
         <p class="info-link">Выбрать квартиру</p>
-      </div></a><a class="menu-info__item" href="tel:+380506347178">
+      </div></a>
+    <div class="menu-info__item">
       <svg class="menu-info__icon">
         <use xlink:href="images/main-page_icons-sprite.svg#phone"></use>
-        <div class="menu-info__text"> 
-          <p>+38(050) 634 71 78</p>
+        <!--CLASS CHANGE!!!-->
+        <div class="menu-info__text"> <a href="tel:+380506347178">+38(050) 634 71 78</a>
           <p class="link--active">Заказать звонок</p>
         </div>
-      </svg></a></div>
+      </svg>
+    </div>
+  </div>
   <ul class="menu-footer">
     <li class="menu-item"><a class="link--active" href="#">Выбрать квартиру</a></li>
     <li class="menu-item"><a href="tel:+38(050)-991-58-80">+38 (050) 991 58 80</a></li>
