--- a/app/scss/layout/_typography.scss
+++ b/app/scss/layout/_typography.scss
@@ -126,10 +126,31 @@ a {
                     top: -10px;
                     left: 18px;
                 }
+                @media (max-width: 812px) and (orientation: landscape) {
+                    top: -10px;
+                    left: 18px;
+                }
             }
         }
     }
     @media (max-width: 576px) {
+        height: 40px;
+        &__text {
+            padding-left: 55px;
+        }
+        &__icon {
+            svg {
+                @include size(8px, 16px);
+                top: -9px;
+                left: 17px;
+            }
+            &:after {
+                @include size(40px);
+                top: -22px;
+            }
+        }
+    }
+    @media (max-width: 812px) and (orientation: landscape) {
         height: 40px;
         &__text {
             padding-left: 55px;
@@ -183,6 +204,11 @@ a {
         line-height: 44px;
         margin-bottom: 10px;
     }
+    @media (max-width: 812px) and (orientation: landscape) {
+        font-size: 36px;
+        line-height: 44px;
+        margin-bottom: 10px;
+    }
 }
 
 section {
@@ -191,6 +217,9 @@ section {
     background: linear-gradient(90deg, rgba(0, 0, 0, .1), hsla(0, 0%, 80%, 0) 40%), linear-gradient(270deg, rgba(0, 0, 0, .1), hsla(0, 0%, 50.2%, 0) 47.55%);
     @media (max-width: 576px) {
         padding: 30px 0;
+    }
+    @media (max-width: 812px) and (orientation: landscape) {
+        padding: 100px 0 30px 0;
     }
 }
 
