--- a/app/scss/modules/_header.scss
+++ b/app/scss/modules/_header.scss
@@ -11,6 +11,7 @@
         display: flex;
         flex-direction: column;
         justify-content: flex-end;
+        align-items: flex-end;
         width: 100%;
         padding: 40px 100px;
         text-transform: uppercase;
@@ -34,6 +35,14 @@
                 font-size: 36px;
                 line-height: 44px;
             }
+            @media (min-width: 768px) and (orientation: portrait) {
+                font-size: 48px;
+                line-height: 54px;
+            }
+            @media (max-width: 812px) and (orientation: landscape) {
+                font-size: 48px;
+                line-height: 54px;
+            }
         }
         &__text {
             font-size: 29px;
@@ -42,6 +51,7 @@
             letter-spacing: .0001rem;
             border-right: solid 2px white;
             line-height: 1.3;
+            width: 60%;
             @media (max-width: 1200px) {
                 font-size: 24px;
             }
@@ -56,6 +66,9 @@
                 padding-right: 20px;
                 margin-bottom: 100px;
             }
+            @media (max-width: 812px) and (orientation: landscape) {
+                font-size: 16px;
+            }
         }
         .arrow-btn {
             margin-top: 21px;
@@ -63,53 +76,3 @@
         }
     }
 }
-
-//MOBILE
-// .burger-menu {
-//     cursor: pointer;
-//     height: 20px;
-//     display: flex;
-//     align-items: center;
-//     transition: all .3s;
-//     margin: 9px 15px 0 0;
-//     @media (min-width: $width-md) {
-//         display: none;
-//     }
-//     &__item {
-//         @include size(20px, 2px);
-//         display: block;
-//         background: #000;
-//         position: relative;
-//         &::before,
-//         &::after {
-//             @include size(26px, 100%);
-//             @include pos($l: -3px);
-//             content: '';
-//             background: #000;
-//             transition: all .3s;
-//         }
-//         &::before {
-//             top: -9px;
-//         }
-//         &::after {
-//             bottom: -9px;
-//         }
-//     }
-//     &.burger-menu--active {
-//         margin-right: 155px;
-//         .burger-menu__item {
-//             background: transparent;
-//             &::before {
-//                 transform: rotate(45deg);
-//                 transform-origin: 0 0;
-//             }
-//             &::after {
-//                 transform: rotate(-45deg);
-//                 transform-origin: 0 100%;
-//             }
-//         }
-//         +.nav {
-//             right: 0;
-//         }
-//     }
-// }
