--- a/app/scss/modules/_info.scss
+++ b/app/scss/modules/_info.scss
@@ -13,6 +13,12 @@
     @media (max-width: 576px) {
         display: none;
     }
+    @media (min-width: 768px) and (orientation: portrait) {
+        display: none;
+    }
+    @media (max-width: 812px) and (orientation: landscape) {
+        display: none;
+    }
     &-block {
         width: 50%;
         min-width: 205px;
