--- a/app/scss/modules/_modal.scss
+++ b/app/scss/modules/_modal.scss
@@ -1,4 +1,7 @@
 .modal {
+    &-is-shown {
+        display: block;
+    }
     display: none;
     position: fixed;
     z-index: 10;
@@ -9,41 +12,287 @@
     overflow: auto;
     background: rgba(66, 60, 58, 0.7);
     &__content {
+        // background: $light-bg;
+        // color: #423C3A;
+        // padding: 60px 100px 110px;
+        @include pos($t: 50%, $l: 50%);
+        transform: translateX(-50%) translateY(-50%);
+        width: 100%;
+        //@include size(100%);
+        @media (max-width: 576px) {
+            @include pos($t: 0, $l: 0);
+            transform: none;
+        }
+        @media (max-width: 812px) and (orientation: landscape) {
+            @include pos($t: 0, $l: 0);
+            transform: none;
+        }
+    }
+    &__form {
         background: $light-bg;
-        form {
-            fieldset {
-                font-style: normal;
-                font-weight: normal;
-                font-size: 36px;
-                line-height: 44px;
+        color: #423C3A;
+        padding: 60px 100px 110px;
+        position: relative;
+        @media (max-width: 576px) {
+            padding: 20px;
+            height: 100vh;
+        }
+        @media (max-width: 812px) and (orientation: landscape) {
+            padding: 20px;
+        }
+        label:nth-child(2) {
+            grid-column: 1 / 5;
+            grid-row: 2 / 3;
+            @media (max-width: 576px) {
                 grid-column: 1 / 13;
-                grid-row: 1 / 2;
-            }
-            label:nth-child(2) {
-                grid-column: 1 / 4;
                 grid-row: 2 / 3;
             }
-            label:nth-child(3) {
-                grid-column: 5 / 9;
+            @media (max-width: 812px) and (orientation: landscape) {
+                grid-column: 2 / 12;
                 grid-row: 2 / 3;
             }
-            label:nth-child(4) {
-                grid-column: 9 / 13;
-                grid-row: 2 / 3;
-            }
-            label:nth-child(5) {
-                grid-column: 2 / 7;
+        }
+        label:nth-child(3) {
+            grid-column: 5 / 9;
+            grid-row: 2 / 3;
+            @media (max-width: 576px) {
+                grid-column: 1 / 13;
                 grid-row: 3 / 4;
             }
-            button {
-                grid-column: 9 / 12;
+            @media (max-width: 812px) and (orientation: landscape) {
+                grid-column: 2 / 12;
                 grid-row: 3 / 4;
             }
         }
+        label:nth-child(4) {
+            grid-column: 9 / 13;
+            grid-row: 2 / 3;
+            @media (max-width: 576px) {
+                grid-column: 1 / 13;
+                grid-row: 4 / 5;
+            }
+            @media (max-width: 812px) and (orientation: landscape) {
+                grid-column: 2 / 12;
+                grid-row: 4 / 5;
+            }
+        }
+        label:nth-child(5) {
+            grid-column: 2 / 7;
+            grid-row: 5 / 6;
+            @media (max-width: 576px) {
+                grid-column: 2 / 13;
+                grid-row: 5 / 6;
+            }
+            @media (max-width: 812px) and (orientation: landscape) {
+                grid-column: 3 / 12;
+                grid-row: 5 / 6;
+            }
+        }
+        button {
+            grid-column: 9 / 12;
+            grid-row: 5 / 6;
+            @media (max-width: 576px) {
+                grid-column: 2 / 13;
+                grid-row: 6 / 7;
+            }
+            @media (max-width: 812px) and (orientation: landscape) {
+                grid-column: 2 / 13;
+                grid-row: 6 / 7;
+            }
+        }
     }
-    .grid {
-        grid-template-columns: repeat(auto 3, 1fr);
-        grid-template-rows: repeat(3, 1fr);
-        max-height: 600px;
+    &__headline {
+        font-size: 36px;
+        line-height: 44px;
+        grid-column: 1 / 12;
+        grid-row: 1 / 2;
+        text-transform: uppercase;
+        text-align: left;
+        margin-bottom: 50px;
+        @media (max-width: 576px) {
+            font-size: 24px;
+            line-height: 29px;
+            grid-column: 1 / 10;
+            grid-row: 1 / 2;
+        }
+        @media (max-width: 812px) and (orientation: landscape) {
+            font-size: 24px;
+            line-height: 29px;
+            grid-column: 2 / 10;
+            grid-row: 1 / 2;
+        }
+    }
+    &__label {
+        display: flex;
+        flex-direction: column;
+        text-transform: uppercase;
+        font-size: 1.25rem;
+        @media (max-width: 576px) {
+            font-weight: normal;
+            font-size: 18px;
+            line-height: 20px;
+            margin: 15px 0;
+        }
+        @media (max-width: 812px) and (orientation: landscape) {
+            font-weight: normal;
+            font-size: 18px;
+            line-height: 20px;
+            margin: 15px 0;
+        }
+    }
+    &__field {
+        margin: 1rem 0 0;
+        font-size: 1rem;
+        line-height: 1.2rem;
+        background: transparent;
+        border-bottom: 2px solid #423C3A;
+        padding: .2rem 0;
+    }
+    &__custom-check {
+        cursor: pointer;
+        @include pos($t: 50%, $l: -35px);
+        @include size(20px);
+        transform: translateY(-50%);
+        background: #FFFFFF;
+        border: 1px solid #828282;
+        border-radius: 3px;
+        transition: all .3s;
+        @media (max-width: 576px) {
+            @include pos($t: 50%, $l: -30px);
+        }
+        @media (max-width: 812px) and (orientation: landscape) {
+            @include pos($t: 50%, $l: -30px);
+        }
+        &:after {
+            content: "";
+            display: none;
+            @include pos($t: 1px, $l: 5px);
+            border: solid #828282;
+            border-width: 0 3px 3px 0;
+            @include size(5px, 10px);
+            transform: rotate(45deg);
+        }
+    }
+    &__checkbox {
+        grid-column: 2 / 7;
+        grid-row: 3 / 4;
+        position: relative;
+        word-wrap: break-word;
+        display: inline;
+        line-height: 1.2rem;
+        text-transform: uppercase;
+        margin: 20px 0;
+        cursor: pointer;
+        &:hover {
+            ~.modal__custom-check {
+                background: $bb-pressed;
+            }
+        }
+        input {
+            @include pos($l: -9999px);
+            &:checked {
+                // ~.modal__custom-check {
+                //     background: #514947;
+                // }
+                ~.modal__custom-check:after {
+                    display: block;
+                }
+            }
+        }
+        label {
+            display: inline-block;
+            font-size: 1rem;
+        }
+    }
+    &__link {
+        &:hover {
+            color: #514947;
+        }
+    }
+    &__btn {
+        @media (max-width: 576px) {
+            justify-self: center;
+            margin-top: 40px;
+        }
+        @media (max-width: 812px) and (orientation: landscape) {
+            justify-self: center;
+            margin-top: 40px;
+        }
+        height: 4rem;
+        align-self: flex-end;
+        text-transform: uppercase;
+    }
+    &__close {
+        grid-column: 12 / 13;
+        grid-row: 1 / 2;
+        position: relative;
+        @media (max-width: 576px) {
+            grid-column: 11 / 12;
+            grid-row: 1 / 2;
+        }
+        @media (max-width: 812px) and (orientation: landscape) {
+            grid-column: 11 / 12;
+            grid-row: 1 / 2;
+        }
+    }
+    .close {
+        @include pos($t: -25px, $r: -60px);
+        @include size(75px);
+        background: #F5F5F4;
+        border-radius: 50%;
+        cursor: pointer;
+        transition: all .3s;
+        &:hover {
+            background: #514947;
+            &:before,
+            &:after {
+                background: #F5F5F4;
+            }
+        }
+        &:active {
+            background: #423C3A;
+        }
+        &:before {
+            content: '';
+            @include pos($t: 14px, $r: 36px);
+            @include size(2px, 45px);
+            transform: rotate(45deg);
+            background: #514947;
+        }
+        &:after {
+            content: '';
+            @include pos($t: 14px, $r: 36px);
+            @include size(2px, 45px);
+            transform: rotate(-45deg);
+            background: #514947;
+        }
+        @media (max-width: 576px) {
+            grid-column: 12 / 13;
+            grid-row: 1 / 2;
+            @include size(40px);
+            @include pos($t: 4px, $r: -25px);
+            &:before {
+                @include size(1px, 25px);
+                @include pos($t: 7px, $r: 20px);
+            }
+            &:after {
+                @include size(1px, 25px);
+                @include pos($t: 7px, $r: 20px);
+            }
+        }
+        @media (max-width: 812px) and (orientation: landscape) {
+            grid-column: 11 / 12;
+            grid-row: 1 / 2;
+            @include size(40px);
+            @include pos($t: 4px, $r: -25px);
+            &:before {
+                @include size(1px, 25px);
+                @include pos($t: 7px, $r: 20px);
+            }
+            &:after {
+                @include size(1px, 25px);
+                @include pos($t: 7px, $r: 20px);
+            }
+        }
     }
 }
