--- a/app/scss/modules/_section-contact.scss
+++ b/app/scss/modules/_section-contact.scss
@@ -20,6 +20,10 @@
             font-size: 24px;
             line-height: 29px;
         }
+        @media (max-width: 812px) and (orientation: landscape) {
+            font-size: 24px;
+            line-height: 29px;
+        }
     }
     &__title {
         display: flex;
@@ -32,11 +36,21 @@
             line-height: 20px;
             margin: 15px 0;
         }
+        @media (max-width: 812px) and (orientation: landscape) {
+            font-weight: normal;
+            font-size: 18px;
+            line-height: 20px;
+            margin: 15px 0;
+        }
         &:nth-child(2) {
             grid-column: 1 / 5;
             grid-row: 2 / 3;
             @media (max-width: 576px) {
                 grid-column: 1 / 13;
+                grid-row: 2 / 3;
+            }
+            @media (max-width: 812px) and (orientation: landscape) {
+                grid-column: 2 / 12;
                 grid-row: 2 / 3;
             }
         }
@@ -47,6 +61,10 @@
                 grid-column: 1 / 13;
                 grid-row: 3 / 4;
             }
+            @media (max-width: 812px) and (orientation: landscape) {
+                grid-column: 2 / 12;
+                grid-row: 3 / 4;
+            }
         }
         &:nth-child(4) {
             grid-column: 9 / 13;
@@ -55,20 +73,50 @@
                 grid-column: 1 / 13;
                 grid-row: 4 / 5;
             }
+            @media (max-width: 812px) and (orientation: landscape) {
+                grid-column: 2 / 12;
+                grid-row: 4 / 5;
+            }
         }
     }
     &__field {
-        margin: 1rem 0 0 0;
+        margin: 1rem 0 0;
         font-size: 1rem;
         line-height: 1.2rem;
         background: transparent;
-        border-bottom: 2px solid #ffffff;
+        border-bottom: 2px solid #FFFFFF;
         padding: .2rem 0;
         color: #FFFFFF;
+    }
+    &__custom-check {
+        cursor: pointer;
+        @include pos($t: 50%, $l: -35px);
+        @include size(20px);
+        transform: translateY(-50%);
+        background: #FFFFFF;
+        border: 1px solid #828282;
+        border-radius: 3px;
+        transition: all .3s;
+        &:after {
+            content: "";
+            display: none;
+            @include pos($t: 1px, $l: 5px);
+            border: solid #828282;
+            border-width: 0 3px 3px 0;
+            @include size(5px, 10px);
+            transform: rotate(45deg);
+        }
     }
     &__checkbox {
         grid-column: 2 / 7;
         grid-row: 3 / 4;
+        position: relative;
+        word-wrap: break-word;
+        display: inline;
+        line-height: 1.2rem;
+        text-transform: uppercase;
+        margin-top: 100px;
+        cursor: pointer;
         @media (max-width: 1366px) {
             grid-column: 2 / 8;
         }
@@ -76,33 +124,50 @@
             grid-column: 2 / 8;
         }
         @media (max-width: 576px) {
-            grid-column: 1 / 13;
+            grid-column: 3 / 13;
             grid-row: 5 / 6;
             margin-top: 50px;
         }
-        display: flex;
-        align-items: center;
-        line-height: 1.2rem;
-        text-transform: uppercase;
-        margin-top: 100px;
+        @media (max-width: 812px) and (orientation: landscape) {
+            grid-column: 3 / 12;
+            grid-row: 5 / 6;
+            margin-top: 50px;
+        }
+        &:hover {
+            ~.contact-form__custom-check {
+                background: $bb-pressed;
+            }
+        }
         input {
-            margin: 0 20px 0 0;
+            @include pos($l: -9999px);
+            &:checked {
+                ~.contact-form__custom-check {
+                    background: $link-pressed;
+                }
+                ~.contact-form__custom-check:after {
+                    display: block;
+                }
+            }
         }
         label {
             display: inline-block;
             font-size: 1rem;
         }
     }
-    &__text {
-        word-wrap: break-word;
-        .contact-form__title {
-            margin: 0;
-        }
+    &__link {
+        display: inline;
+        width: 100%;
     }
     &__btn {
         grid-column: 9 / 12;
         grid-row: 3 / 4;
         @media (max-width: 576px) {
+            grid-column: 1 / 13;
+            grid-row: 6 / 7;
+            justify-self: center;
+            margin-top: 40px;
+        }
+        @media (max-width: 812px) and (orientation: landscape) {
             grid-column: 1 / 13;
             grid-row: 6 / 7;
             justify-self: center;
