--- a/app/scss/modules/_sidebar.scss
+++ b/app/scss/modules/_sidebar.scss
@@ -2,10 +2,10 @@
         position: fixed;
         top: 0;
         left: 0;
-        z-index: 5;
+        z-index: 10;
         mix-blend-mode: normal;
         background: rgba(0, 0, 0, 0);
-        mix-blend-mode: difference;
+        mix-blend-mode: exclusion;
         &-content {
             position: relative;
             display: flex;
@@ -25,6 +25,15 @@
                 padding: 50px 20px 45vh;
             }
             @media (max-width: 576px) {
+                display: none;
+            }
+            @media (max-width: 576px) {
+                display: none;
+            }
+            @media (min-width: 768px) and (orientation: portrait) {
+                display: none;
+            }
+            @media (max-width: 812px) and (orientation: landscape) {
                 display: none;
             }
         }
@@ -126,16 +135,22 @@
     
     .menu {
         @include pos($t: 0, $l: 0);
-        // position: relative;
         @include size(40rem, 100vh);
         z-index: 1;
         padding: 50px 0;
         transition: all .3s;
         display: block;
         position: fixed;
-        z-index: 3;
+        z-index: 9;
         background: $page-bg;
+        overflow: hidden;
         @media (max-width: 576px) {
+            width: 100%;
+        }
+        @media (min-width: 768px) and (orientation: portrait) {
+            width: 100%;
+        }
+        @media (max-width: 812px) and (orientation: landscape) {
             width: 100%;
         }
         &:after {
@@ -147,6 +162,12 @@
             background: rgba(66, 60, 58, 0.7);
             pointer-events: none;
             transition: all .3s;
+            @media (min-width: 768px) and (orientation: portrait) {
+                display: none;
+            }
+            @media (max-width: 812px) and (orientation: landscape) {
+                display: none;
+            }
         }
         &-item {
             padding: 1rem 0;
@@ -154,6 +175,13 @@
             text-transform: uppercase;
             @media (max-width: 576px) {
                 padding: 1.2rem;
+            }
+            @media (min-width: 768px) and (orientation: portrait) {
+                padding: 1.2rem;
+            }
+            @media (max-width: 812px) and (orientation: landscape) {
+                padding: .6rem 0;
+                font-size: 1.4rem;
             }
         }
         &-top {
@@ -172,9 +200,21 @@
                 font-size: 24px;
                 line-height: 29px;
             }
+            @media (min-width: 768px) and (orientation: portrait) {
+                top: 180px;
+                left: 50%;
+                transform: translateX(-50%);
+                text-align: center;
+                font-size: 24px;
+                line-height: 29px;
+            }
             @media (max-width: 320px) {
                 font-size: 16px;
                 line-height: 20px;
+            }
+            @media (max-width: 812px) and (orientation: landscape) {
+                top: 120px;
+                left: 20%;
             }
         }
         &-footer {
@@ -183,6 +223,12 @@
                 bottom: 85px;
             }
             @media (max-width: 576px) {
+                display: none;
+            }
+            @media (min-width: 768px) and (orientation: portrait) {
+                display: none;
+            }
+            @media (max-width: 812px) and (orientation: landscape) {
                 display: none;
             }
             display: flex;
@@ -206,6 +252,18 @@
                 @include pos($b: 40px, $l: 0);
                 //transform: translateY(-50%);
             }
+            @media (min-width: 768px) and (orientation: portrait) {
+                display: flex;
+                width: 60%;
+                @include pos($b: 100px, $l: 50%);
+                transform: translateX(-50%);
+            }
+            @media (max-width: 812px) and (orientation: landscape) {
+                display: flex;
+                width: 45%;
+                @include pos($b: 70px, $r: 55px);
+                //transform: translateY(-50%);
+            }
             &__item {
                 display: flex;
                 //justify-content: space-around;
@@ -220,12 +278,18 @@
                     font-size: 16px;
                     margin: 5px 0;
                 }
+                @media (min-width: 768px) and (orientation: portrait) {
+                    font-size: 21px;
+                }
             }
             &__icon {
                 @include size(60px);
                 fill: #FFFFFF;
                 @media (max-width: 320px) {
                     @include size(30px);
+                }
+                @media (min-width: 768px) and (orientation: portrait) {
+                    @include size(60px);
                 }
             }
             .link--active {
@@ -249,27 +313,24 @@
         @include pos($t: 0, $l: -40rem);
     }
     
-    // @media (max-width: 1200px) {
-    //     font-size: 16px;
-    // }
-    // @media (max-width: 1024px) {
-    //     font-size: 12px;
-    // }
-    // @media (max-width: 768px) {
-    //     font-size: 10px;
-    // }
     .mobile-menu {
         display: none;
         position: absolute;
         justify-content: space-between;
         top: 30px;
         left: 30px;
-        z-index: 3;
+        z-index: 10;
         &__icon {
             @include size(55px);
             fill: #FFFFFF;
         }
         @media (max-width: 576px) {
+            display: block;
+        }
+        @media (min-width: 768px) and (orientation: portrait) {
+            display: block;
+        }
+        @media (max-width: 812px) and (orientation: landscape) {
             display: block;
         }
     }
@@ -280,6 +341,12 @@
         padding: 15px 0;
         @include pos($t: 30px, $r: 30px);
         @media (max-width: 576px) {
+            display: block;
+        }
+        @media (min-width: 768px) and (orientation: portrait) {
+            display: block;
+        }
+        @media (max-width: 812px) and (orientation: landscape) {
             display: block;
         }
     }
@@ -311,5 +378,14 @@
         }
         @media (max-width: 576px) {
             display: block;
+        }
+        @media (min-width: 768px) and (orientation: portrait) {
+            display: block;
+            @include pos($t: 30px, $l: 50%);
+        }
+        @media (max-width: 812px) and (orientation: landscape) {
+            display: block;
+            @include pos($t: 60px, $l: 50%);
+            transform: translateY(-50%) translateX(-50%);
         }
     }
