modal-video button fix; modal-video content size fix;

--- a/app/pug/layout/section-about.pug
+++ b/app/pug/layout/section-about.pug
@@ -60,7 +60,7 @@
             // TILE END
         //SLIDER END    
         .about-btn
-            a.arrow-btn.arrow-btn--dark(href="#about")
+            .arrow-btn.arrow-btn--dark
                 .arrow-btn__icon
                     svg.icon
                         use(xlink:href="images/main-page_icons-sprite.svg#play-button")
